Logo jump fix

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -56,6 +56,7 @@ footer {
 
 .logo {
 	max-width: 25%;
+	padding-top: calc(189 / 186 * 100%);
 }
 
 main {
